--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,6 @@ pycparser==2.21
 PyMySQL==1.0.2
 python-dotenv==0.17.1
 Werkzeug==2.0.1
+google-api-python-client
+google-auth-httplib2
+google-auth-oauthlib
