--- a/python3-virtualenv/pyvenv.cfg
+++ b/python3-virtualenv/pyvenv.cfg
@@ -1,3 +1,3 @@
-home = C:\msys64\mingw64\bin\mingw64\bin
+home = /Users/hadi/opt/anaconda3/bin
 include-system-site-packages = false
 version = 3.9.7
